Closed Bug 561690 Opened 13 years ago Closed 13 years ago

Plugin crash with nspluginwrapper [@ mozilla::plugins::child::_geturlnotify ]

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

e.g. bp-28ae0fd5-94c0-4a20-a7bd-edf842100424

This is the same cause as bug 548434.
I think it is really a plugin bug but IPPs are protected against this in
MakeNewNPAPIStreamInternal:
http://hg.mozilla.org/mozilla-central/annotate/06122cd5fb03/modules/plugin/base/src/nsNPAPIPlugin.cpp#l543
Attached patch null checkSplinter Review
There are a number of functions in nspluginwrapper's npw-wrapper.c that could
cause the same problem but, as this is just a workaround for a plugin bug, I
don't feel like doing more than patching for the problems we actually see.
Attachment #441425 - Flags: review?(jones.chris.g)
Attachment #441425 - Flags: review?(jones.chris.g) → review+
http://hg.mozilla.org/mozilla-central/rev/a0150d284f6c

We are not planning to run nspluginwrapper OOP on 1.9.2, so AFAIK we don't need this on 1.9.2.
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a5
experienced this bug on 3.7a5 electrolysis nightlies
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a5pre) Gecko/20100614 Minefield/3.7a5pre ( .NET CLR 3.5.30729; .NET4.0E)


http://crash-stats.mozilla.com/report/index/bb414939-302c-4172-9c31-f05dd2100614

it crashed when some site wanted to display some pdf in a new tab or something (having foxit pdf viewer installed, on win32/winxp).
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.