b=561690 NULL check aNPP in _geturlnotify for nspluginwrapper r=bsmedberg